js/js.translator/testData/incremental/invalidation/jsCodeWithConstStringFromOtherModule/lib2/inlineFunction.4.kt
inline fun inlineFunction(): String {
    return js("'4'") as String
}
